fix: remove overflow: hidden on layout

--- a/src/components/Layout/style.module.scss
+++ b/src/components/Layout/style.module.scss
@@ -1,4 +1,3 @@
 .layout {
-  overflow: hidden;
   min-width: 375px;
 }
